<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JC-21 ﾒﾃﾞｨｱﾏﾈｰｼﾞｬｰ</string>
    <string name="app_name_short">JC-21</string>
    <string name="dummy">DUMMY</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="run">実行</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="stop">中止</string>
    <string name="reset_uri">初期値に戻す</string>

    <string name="ic_file"></string>
    <string name="ic_date"></string>
    <string name="ic_protected"></string>
    <string name="ic_cached"></string>

    <string name="login">ログイン</string>
    <string name="login_offline">オフラインモード</string>
    <string name="login_uri">ログインURI</string>
    <string name="id">ログインID</string>
    <string name="password">パスワード</string>
    <string name="logging_in">ログイン中…</string>
    <string name="uri_could_not_be_empty">URIは空白にはできません。</string>
    <string name="is_not_input">が入力されていません。</string>
    <string name="login_failure_please_check_login_uri">ログインに失敗しました。ネットワークの状態またはログインURIをもう一度確認してください。</string>
    <string name="login_failure_please_check_id_pass">ログインに失敗しました。ID・パスワードをもう一度確認してください。</string>
    <string name="please_login_once_before_use_offline_mode">オフラインモードを利用するには、一度以上ログインする必要があります。</string>

    <string name="book_list">書籍一覧</string>
    <string name="online_mode">オンラインモード</string>
    <string name="offline_mode">オフラインモード</string>
    <string name="filter_search">絞り込み検索</string>
    <string name="search_by_string">文字列</string>
    <string name="contains">を含む</string>
    <string name="not_contains">を含まない</string>
    <string name="start_with">で始まる</string>
    <string name="end_with">で終わる</string>
    <string name="filter">絞り込み</string>
    <string name="sort">並べ替え</string>
    <string name="period">期間</string>
    <string name="filter_by_follow_period">次の期間で絞り込む</string>
    <string name="filter_period_from">から</string>
    <string name="filter_period_to">まで</string>
    <string name="target_class">クラス</string>
    <string name="author">投稿者</string>
    <string name="confidential">保護</string>
    <string name="cached_state">ダウンロード状態</string>
    <string name="not_specified">指定しない</string>

    <string name="loading">読み込み中</string>
    <string name="downloading_catalog">カタログをダウンロード中…</string>
    <string name="updating_databases">データベースを更新中…</string>
    <string name="loading_catalog">カタログを読み込み中…</string>
    <string name="downloading_book">書籍をダウンロード中…</string>
    <string name="download_failure_please_try_again_later">ダウンロードに失敗しました。しばらく経ってからもう一度やり直してください。</string>

    <string name="cached">DL済</string>
    <string name="non_cached">未DL</string>
    <string name="cached_f">ダウンロード済</string>
    <string name="non_cached_f">未ダウンロード</string>
    <string name="protected_file">保護あり</string>
    <string name="non_protected_file">保護なし</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">時</string>
    <string name="minute">分</string>

    <!-- MuPDF Resources -->
    <string name="version">1.3 (git build)</string>
    <string name="accept">承諾</string>
    <string name="cannot_open_buffer">バッファーを開けません</string>
    <string name="cannot_open_document">ドキュメントを開けません</string>
    <string name="cannot_open_document_Reason">次のドキュメントを開けません: %1$s</string>
    <string name="cannot_open_file_Path">次のファイルを開けません: %1$s</string>
    <string name="choose_value">文字列を選択してください</string>
    <string name="copied_to_clipboard">クリップボードにコピーしました</string>
    <string name="copy">コピー</string>
    <string name="copy_text">テキストをコピー</string>
    <string name="copy_text_to_the_clipboard">テキストをクリップボードにコピー</string>
    <string name="delete">削除</string>
    <string name="dismiss">閉じる</string>
    <string name="document_has_changes_save_them_">変更が加えられています。保存しますか？</string>
    <string name="draw_annotation">注釈を挿入</string>
    <string name="edit_annotations">注釈を編集</string>
    <string name="enter_password">パスワードを入力</string>
    <string name="entering_reflow_mode">リフローモードを開始</string>
    <string name="leaving_reflow_mode">リフローモードを終了</string>
    <string name="entering_link_mode">リンクを有効化</string>
    <string name="leaving_link_mode">リンクを無効化</string>
    <string name="fill_out_text_field">テキストフィールドに書き込む</string>
    <string name="format_currently_not_supported">このフォーマットは現在サポートされていません</string>
    <string name="highlight">ハイライト</string>
    <string name="ink">インク</string>
    <string name="more">もっと</string>
    <string name="no">いいえ</string>
    <string name="no_further_occurrences_found">他に文字列は見つかりませんでした</string>
    <string name="no_media_hint">ストレージをPCと共有するとアクセスできなくなる可能性があります</string>
    <string name="no_media_warning">ストレージが見つかりません</string>
    <string name="no_text_selected">テキストが選択されていません</string>
    <string name="not_supported">サポートされていません</string>
    <string name="nothing_to_save">保存するものがありません</string>
    <string name="okay">OK</string>
    <string name="outline_title">目次</string>
    <string name="parent_directory">[一つ上位のレベル]</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="save">保存</string>
    <string name="search">検索</string>
    <string name="search_backwards">逆方向検索</string>
    <string name="search_document">ドキュメントを検索する</string>
    <string name="search_forwards">順方向検索</string>
    <string name="searching_">検索中</string>
    <string name="select">選択</string>
    <string name="select_text">テキストを選択</string>
    <string name="strike_out">取り消し線</string>
    <string name="text_not_found">テキストが見つかりません</string>
    <string name="toggle_links">ハイライトしてリンクを有効化</string>
    <string name="underline">下線を引く</string>
    <string name="yes">はい</string>
    <string name="toggle_reflow_mode">リフローモードを切り替え</string>
</resources>