<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/catalog_item_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/catalog_left_margin"
        android:layout_marginRight="@dimen/catalog_right_margin"
        android:paddingTop="@dimen/catalog_vertical_padding"
        android:paddingBottom="@dimen/catalog_vertical_padding">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:id="@+id/iconContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ic_file"
                android:textSize="@dimen/ic_catalog_file"
                android:textColor="@color/catalog_primary_text"
                android:id="@+id/textViewIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dummy"
                android:textSize="@dimen/txt_catalog_book_4"
                android:textColor="@color/catalog_primary_text"
                android:id="@+id/textViewExt" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/iconContainer"
            android:layout_toLeftOf="@+id/textViewConfidentialIcon"
            android:layout_marginRight="8dp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/dummy"
            android:textSize="@dimen/txt_catalog_book_1"
            android:textColor="@color/catalog_primary_text"
            android:id="@+id/textViewTitle" />

        <TextView
            android:layout_width="@dimen/ic_catalog_book_2"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/iconContainer"
            android:paddingBottom="@dimen/ic_catalog_adjust_1"
            android:layout_marginRight="@dimen/ic_catalog_margin"
            android:text="@string/ic_date"
            android:textSize="@dimen/ic_catalog_book_2"
            android:textColor="@color/catalog_secondary_text"
            android:id="@+id/textViewDateIcon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/textViewDateIcon"
            android:layout_toLeftOf="@+id/textViewCachedIcon"
            android:layout_marginRight="8dp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/dummy"
            android:textSize="@dimen/txt_catalog_book_1"
            android:textColor="@color/catalog_secondary_text"
            android:id="@+id/textViewDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/dummy"
            android:textSize="@dimen/txt_catalog_book_2"
            android:textColor="@color/catalog_secondary_text"
            android:id="@+id/textViewConfidential" />

        <TextView
            android:layout_width="@dimen/ic_catalog_book_2"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@id/textViewConfidential"
            android:layout_toLeftOf="@id/textViewConfidential"
            android:layout_marginRight="@dimen/ic_catalog_margin"
            android:paddingTop="@dimen/ic_catalog_adjust_2"
            android:text="@string/ic_protected"
            android:textSize="@dimen/ic_catalog_book_1"
            android:textColor="@color/catalog_secondary_text"
            android:id="@+id/textViewConfidentialIcon"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@id/textViewConfidential"
            android:layout_below="@id/textViewConfidential"
            android:layout_marginTop="5dp"
            android:text="@string/dummy"
            android:textSize="@dimen/txt_catalog_book_2"
            android:textColor="@color/catalog_secondary_text"
            android:id="@+id/textViewCached" />

        <TextView
            android:layout_width="@dimen/ic_catalog_book_2"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textViewCached"
            android:layout_alignLeft="@id/textViewConfidentialIcon"
            android:layout_toLeftOf="@+id/textViewCached"
            android:layout_below="@id/textViewConfidentialIcon"
            android:layout_marginRight="@dimen/ic_catalog_margin"
            android:paddingTop="@dimen/ic_catalog_adjust_2"
            android:text="@string/ic_cached"
            android:textSize="@dimen/ic_catalog_book_2"
            android:textColor="@color/catalog_secondary_text"
            android:id="@+id/textViewCachedIcon"
            android:gravity="center_horizontal" />

    </RelativeLayout>
</FrameLayout>